# SoftwareudviklingVM

./: README.md
SU_Project/: CMakeLists.txt  game.db
SU_Project/header/: cavefactory.hpp  enemy.hpp  enemyfactory.hpp  hero.hpp  weapon.hpp
SU_Project/saves/: saves.txt
SU_Project/src/: cavefactory.cpp  enemy.cpp  enemyfactory.cpp  hero.cpp  main.cpp  weapon.cpp
To-Do_list/: main  partialmain.cpp  test1.cpp  todo
